@@ -2,8 +2,6 @@ language: python
 os:
   - linux
 python:
-  - "3.3"
-  - "3.4"
   - "3.5"
   - "3.6"
   - "nightly"
