@@ -15,4 +15,6 @@ js-body = js/impress.js
 
 resources = images/hovercraft_logo.png
 
+resource-directories = directory
+
 doctype = <!DOCTYPE html SYSTEM "about:legacy-compat">
