@@ -29,8 +29,6 @@ setup(name='hovercraft',
                    'Operating System :: OS Independent',
                    'Programming Language :: Python :: 3',
                    'Programming Language :: Python :: 3 :: Only',
-                   'Programming Language :: Python :: 3.3',
-                   'Programming Language :: Python :: 3.4',
                    'Programming Language :: Python :: 3.5',
                    'Programming Language :: Python :: 3.6',
                    'License :: OSI Approved :: MIT License',
